Definindo a posição dos elementos com css

--- a/site/index.html
+++ b/site/index.html
@@ -10,64 +10,57 @@
     <nav>
 
     </nav>
-    <header>
-        <section>
-            <h1></h1>
-            <div>
-                <p></p>
-                <p></p>
-            </div>
-            <p></p>
-            <a href=""></a>
-        </section>
-        <figure id="FotoMateriaPrincipal">
-
-        </figure>
-    </header>
     <main>
-        <section>
-            <h2></h2>
+        <header>
+            <section>
+                <h1>Titulo da materia</h1>
+                <div>
+                    <p>tema</p>
+                    <p>12/12/2023</p>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae fugiat, inventore accusamus error, vitae magni optio, molestias blanditiis tempora cum consequuntur quibusdam aperiam quam quae saepe voluptates beatae suscipit mollitia.</p>
+                <a href="">Continuar Lendo</a>
+            </section>
+            <figure id="FotoMateriaPrincipal">
+    
+            </figure>
+        </header>
+        <section id="categorias">
+            <h2>O que procura?</h2>
             <article>
-                <div>
-                    <p></p>
-                </div>
-                <div>
-                    <p></p>
-                </div>
-                <div>
-                    <p></p>
-                </div>
-                <div>
-                    <p></p>
-                </div>
+                <a href="">tema</a>
+                <a href="">tema</a>
+                <a href="">tema</a>
+                <a href="">tema</a>
             </article>
         </section>
-        <section>
-            <h2></h2>
-            <article>
-                <img src="" alt="">
-                <figure></figure>
-                <h3></h3>
-                <p></p>
-            </article>
-            <article>
-                <img src="" alt="">
-                <figure></figure>
-                <h3></h3>
-                <p></p>
-            </article>
-            <article>
-                <img src="" alt="">
-                <figure></figure>
-                <h3></h3>
-                <p></p>
-            </article>
-            <article>
-                <img src="" alt="">
-                <figure></figure>
-                <h3></h3>
-                <p></p>
-            </article>
+        <section id="Materias">
+            <h2>Principais Materias</h2>
+            <div>
+                <article>
+                    <img src="" alt="">
+                    <figure></figure>
+                    <h3>titulo</h3>
+                    <p>categoria categoria categoria categoria</p>
+                </article>
+                <article>
+                    <img src="" alt="">
+                    <figure></figure>
+                    <h3>titulo</h3>
+                    <p>categoria categoria categoria categoria</p>
+                </article>
+                <article>
+                    <img src="" alt="">
+                    <figure></figure>
+                    <h3>titulo</h3>
+                    <p>categoria categoria categoria categoria</p>
+                </article>
+                <article>
+                    <img src="" alt="">
+                    <figure></figure>
+                    <h3>titulo</h3>
+                    <p>categoria categoria categoria categoria</p>
+                </article>
         </section>
     </main>
     <footer>
