terminando a responsividade do celular

--- a/site/index.html
+++ b/site/index.html
@@ -15,18 +15,18 @@
             <section>
                 <h1>Titulo da materia</h1>
                 <div>
-                    <p>tema</p>
+                    <p id="tema">tema</p>
                     <p>12/12/2023</p>
                 </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae fugiat, inventore accusamus error, vitae magni optio, molestias blanditiis tempora cum consequuntur quibusdam aperiam quam quae saepe voluptates beatae suscipit mollitia.</p>
-                <a href="">Continuar Lendo</a>
+                <div><a href="">Continuar Lendo</a></div>
             </section>
             <figure id="FotoMateriaPrincipal">
     
             </figure>
         </header>
         <section id="categorias">
-            <h2>O que procura?</h2>
+            <p>O que procura?</p>
             <article>
                 <a href="">tema</a>
                 <a href="">tema</a>
