--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Educação Financeira</title>
 </head>
 
 <body>
     <nav>
-        <a href="index.html"><img src="LogoSemFundo.PNG" alt="Menu"></a>
+        <a href="index.html"><img src="IMG/LogoSemFundo.PNG" alt="Menu"></a>
         <span></span>
     </nav>
     <main>
         <header>
             <h1>Bem vindo ao Educação Financeira<br>Seu blog de finanças para adolescentes</h1>
             <figure id="LogoG">
-                <img src="LogoComFundo.PNG" alt="LogoDoBlog">
+                <img src="IMG/LogoComFundo.PNG" alt="LogoDoBlog">
             </figure>
         </header>
         <section class="container">
@@ -116,7 +116,7 @@
     <footer>
 
     </footer>
-    <script src="script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 
 </html>
