Modificação da materias
Colocando os artigo, falta apenas a 9

--- a/Materia2.html
+++ b/Materia2.html
@@ -13,7 +13,7 @@
     </nav>
     <main>
         <header>
-            <h1>O que é educação financeira?</h1>
+            <h1>O que é investimentos?</h1>
             <p>12/12/2023</p>
             <figure id="LogoG">
                 <img src="IMG/LogoComFundo.PNG" alt="LogoDoBlog">
@@ -22,7 +22,14 @@
         <section>
             <article>
                 <h3>Tema</h3>
-                <p>Educação financeira é o processo em que um indivíduo busca ou obtém conhecimento para lidar com o dinheiro de forma mais consciente e inteligente. Sabendo conceitos básicos de economia como receitas e despesas, juros e inflação ,créditos , investimentos e contas. <br>Mostrando a importância de uma planilha de gastos e criação de hábitos financeiramente rentáveis e seus impactos no cotidiano das pessoas. E com base em artigos confiáveis do governo, analisar a melhor forma de guarda e investir. <br>Portanto esses conhecimentos de finanças são de suma importância para as pessoas pois possibilitam qualidade de vida no presente e principalmente no futuro delas, trazendo conforto para a velhice, já que o bom uso das ferramentas de finanças pessoais tem como resultado uma estabilidade financeira, até mesmo em momentos de crises e situações inusitadas. </p>
+                <p>Talvez você já ouviu a frase:  “Investir é fazer o seu dinheiro trabalhar para você, invés de você trabalhar por ele”, investir é além de apenas visar um lucro fácil mas estar a par do mundo econômico e ter uma visão crítica sobre o cenário econômico e ter uma mente  empreendedora para saber investir em negócios.<br>Os investimentos devem atender aos seus objetivos de vida e você pode começar a investir prevendo dois tipos de reservas: uma para emergências e outra para projetos de vida, mas é preciso tomar decisões inteligentes para não cair em ciladas financeiras.<br>Investir é, basicamente, emprestar o seu dinheiro ao banco para receber os juros pelo dinheiro emprestado. Ou, ainda, aplicar o seu dinheiro em um negócio que vai render lucros. Mas seu objetivo em investir não precisa ser apenas guardar dinheiro pensando no futuro ou acumular riqueza. O investimento deve fazer parte do seu planejamento financeiro e atender aos seus objetivos de vida.<br>Os investimentos também variam de acordo com o prazo
+                <ul>
+                    <li>Investimento de curto prazo: são as aplicações que você realiza para objetivos de até 2 anos, ou seja, é a reserva financeira que você aplica para resgatar quando precisar. Pode ser uma poupança para eventos inesperados ou para um objetivo pré-determinado, como uma viagem de férias, troca do carro, do computador ou de um eletrodoméstico. Os exemplos mais comuns desse tipo de investimento são: Poupança, CDBs (Certificados de Depósitos Bancários) e Letras Financeiras do Tesouro.</li>
+                    <li>Investimento de médio prazo: são aquelas aplicações financeiras que você faz para realizar projetos que exigem mais planejamento e tempo: entre 2 e 5 anos. Pode ser a viagem dos sonhos, a reforma da casa ou a compra de um imóvel. Os exemplos mais comuns desse tipo de investimento são: LTNs (Letras do Tesouro Nacional), CDBs (Certificados de Depósitos Bancários) e NTN-Bs (Notas do Tesouro Nacional – Série B).</li>
+                    <li>Investimento de longo prazo: são as aplicações financeiras que você realiza para alcançar objetivos que podem esperar mais tempo até o seu resgate (mais de 5 anos) e exigem maior rentabilidade: compra de imóveis, faculdade dos filhos, aposentadoria ou a abertura de um negócio próprio. Neste caso, o cuidado com a sua aplicação deve ser redobrado, pois a rentabilidade é maior e os riscos, também. Os exemplos mais comuns desse tipo de investimento são: NTN-Bs Principal (Notas do Tesouro Nacional Série-B Principal), ações de boas e sólidas empresas com crescimento em vendas, lucros e com boa gestão de caixa.</li>
+                </ul>
+                tudo isso deve ser levado em conta quando pensarmos em investir por isso antes de qualquer decisão devemos analisar os riscos e benefícios, dessa forma vamos ter um retorno que condiz com nossas expectativas.
+                    </p>
             </article>
             <aside></aside>
         </section>
