--- a/Materia5.html
+++ b/Materia5.html
@@ -13,7 +13,7 @@
     </nav>
     <main>
         <header>
-            <h1>O que é educação financeira?</h1>
+            <h1>O que é liquidez?</h1>
             <p>12/12/2023</p>
             <figure id="LogoG">
                 <img src="IMG/LogoComFundo.PNG" alt="LogoDoBlog">
@@ -22,7 +22,13 @@
         <section>
             <article>
                 <h3>Tema</h3>
-                <p>Educação financeira é o processo em que um indivíduo busca ou obtém conhecimento para lidar com o dinheiro de forma mais consciente e inteligente. Sabendo conceitos básicos de economia como receitas e despesas, juros e inflação ,créditos , investimentos e contas. <br>Mostrando a importância de uma planilha de gastos e criação de hábitos financeiramente rentáveis e seus impactos no cotidiano das pessoas. E com base em artigos confiáveis do governo, analisar a melhor forma de guarda e investir. <br>Portanto esses conhecimentos de finanças são de suma importância para as pessoas pois possibilitam qualidade de vida no presente e principalmente no futuro delas, trazendo conforto para a velhice, já que o bom uso das ferramentas de finanças pessoais tem como resultado uma estabilidade financeira, até mesmo em momentos de crises e situações inusitadas. </p>
+                <p>Em contabilidade se refere  a capacidade que aquele investimento pode ser "transformado" em dinheiro. Ou seja, é a possibilidade de resgatar os recursos investidos em relação ao tempo.  Quanto mais líquido for um investimento mas fácil será converter ele , existe tipos de liquidez podemos dividir elas em 3 categorias:</p>
+                <ul>
+                    <li>Liquidez Alta: Ativos altamente líquidos podem ser facilmente vendidos a qualquer momento, geralmente com pouca ou nenhuma perda de valor. Exemplos incluem dinheiro em conta corrente, poupança, títulos públicos de curto prazo e ações de empresas muito negociadas em bolsa.</li>
+                    <li>Liquidez Moderada: Alguns investimentos podem ser convertidos em dinheiro, mas pode haver um prazo de aviso prévio ou custos associados à venda. Um exemplo é um certificado de depósito (CD) com uma penalização por resgate antecipado.</li>
+                    <li>Liquidez Baixa : Alguns ativos podem levar mais tempo para serem vendidos, e o processo pode envolver custos significativos. Exemplos incluem imóveis e investimentos em private equity ou em empresas de capital fechado.</li>
+                </ul>
+                A liquidez do seu investimento é muito importante , antes de investir tem que analisar esse fator e sempre ter em mente suas necessidades futuras já que a retirada desse investimento antes do prazo ou em um momento inoportuno pode gerar a perda de lucro.
             </article>
             <aside></aside>
         </section>
