--- a/Materia7.html
+++ b/Materia7.html
@@ -13,7 +13,7 @@
     </nav>
     <main>
         <header>
-            <h1>O que é educação financeira?</h1>
+            <h1>Juros e inflação</h1>
             <p>12/12/2023</p>
             <figure id="LogoG">
                 <img src="IMG/LogoComFundo.PNG" alt="LogoDoBlog">
@@ -22,7 +22,11 @@
         <section>
             <article>
                 <h3>Tema</h3>
-                <p>Educação financeira é o processo em que um indivíduo busca ou obtém conhecimento para lidar com o dinheiro de forma mais consciente e inteligente. Sabendo conceitos básicos de economia como receitas e despesas, juros e inflação ,créditos , investimentos e contas. <br>Mostrando a importância de uma planilha de gastos e criação de hábitos financeiramente rentáveis e seus impactos no cotidiano das pessoas. E com base em artigos confiáveis do governo, analisar a melhor forma de guarda e investir. <br>Portanto esses conhecimentos de finanças são de suma importância para as pessoas pois possibilitam qualidade de vida no presente e principalmente no futuro delas, trazendo conforto para a velhice, já que o bom uso das ferramentas de finanças pessoais tem como resultado uma estabilidade financeira, até mesmo em momentos de crises e situações inusitadas. </p>
+                <p>De uma maneira simples, podemos dizer que juro é o valor pago para usar um dinheiro que não é seu. Funciona mais ou menos como um “aluguel”.</p>
+                <p>Por exemplo: se você pega um valor emprestado de alguém ou de um banco, você deve devolver o mesmo valor e, também, uma quantia extra, como pagamento pelo uso desse dinheiro que foi emprestado por algum tempo. Este valor extra que você deve pagar são os juros. Da mesma maneira, se você deixar um dinheiro no banco, aplicado por um tempo, você deve receber juros pelo uso que o banco faz do seu dinheiro, funciona como o oposto de uma poupança como foi explicado.</p>
+                <p>Cada banco define as taxas de juros que vai praticar em cada operação, por exemplo, nos empréstimos, financiamentos ou investimentos. Essas taxas, porém, têm como base a taxa básica de juros do país, definida pelo COPOM - Comitê de Política Monetária, um órgão do Banco Central. Trata-se da chamada taxa SELIC (Sistema Especial de Liquidação e Custódia), que é uma referência para o cálculo das demais taxas de juros de todo o crédito concedido na economia do país.</p>
+                <p>A inflação afeta diretamente a população porque afeta o poder de compra da população, a inflação vai ser o que vai justificar o preço de itens básicos como : alimentação, habitação, vestuário, transporte, saúde, despesas pessoais, educação. De forma simples é como se o seu dinheiro perdesse valor. Para entender a inflação, pense na seguinte situação: se a oferta de um produto é limitada, mas muitas pessoas querem comprá-lo, o preço desse produto provavelmente aumentará. Isso acontece porque a demanda (pessoas querendo comprar) é maior do que a oferta (quantidade disponível).</p>
+                <p>Além disso, a inflação pode ser causada por outros fatores, como aumento dos custos de produção, aumento dos salários dos trabalhadores, aumento dos impostos, entre outros. Quando os custos aumentam, as empresas geralmente repassam esses aumentos para os preços dos produtos e serviços que vendem.</p>
             </article>
             <aside></aside>
         </section>
