--- a/Materia9.html
+++ b/Materia9.html
@@ -13,7 +13,7 @@
     </nav>
     <main>
         <header>
-            <h1>O que é educação financeira?</h1>
+            <h1>O que é liquidez?</h1>
             <p>12/12/2023</p>
             <figure id="LogoG">
                 <img src="IMG/LogoComFundo.PNG" alt="LogoDoBlog">
@@ -22,7 +22,20 @@
         <section>
             <article>
                 <h3>Tema</h3>
-                <p>Educação financeira é o processo em que um indivíduo busca ou obtém conhecimento para lidar com o dinheiro de forma mais consciente e inteligente. Sabendo conceitos básicos de economia como receitas e despesas, juros e inflação ,créditos , investimentos e contas. <br>Mostrando a importância de uma planilha de gastos e criação de hábitos financeiramente rentáveis e seus impactos no cotidiano das pessoas. E com base em artigos confiáveis do governo, analisar a melhor forma de guarda e investir. <br>Portanto esses conhecimentos de finanças são de suma importância para as pessoas pois possibilitam qualidade de vida no presente e principalmente no futuro delas, trazendo conforto para a velhice, já que o bom uso das ferramentas de finanças pessoais tem como resultado uma estabilidade financeira, até mesmo em momentos de crises e situações inusitadas. </p>
+                <p>Poupança: uma das aplicações mais tradicionais, a poupança aceita valores baixos para que você comece a investir e permite retiradas imediatas. Os juros pagos são definidos pelo Banco Central.</p>
+                <p>Previdência Privada: é um investimento de longo prazo para complementar a aposentadoria.</p>
+                <p>Fundos de investimento: funciona mais ou menos como um condomínio de investidores, onde cada investidor adquire uma cota desse fundo. Existem vários tipos de fundos de investimentos para vários perfis de investidores, de conservadores a moderados até os arrojados, que aceitam correr mais riscos na hora de investir.</p>
+                <p>Tesouro direto: é a compra de títulos públicos federais. Trata-se de um investimento seguro e de valor inicial baixo.</p>
+                <p>Ações: são partes de uma companhia. É como se a empresa fosse um bolo. Ao comprar ações, você passa a ser dono de uma fatia desse bolo, um acionista. Os rendimentos de quem investe em ações variam de acordo com a oscilação do valor dessa empresa na bolsa de valores.</p>
+                <p>CDBs: são títulos de renda fixa, depósitos a prazo utilizados pelos bancos para captar recursos. É uma modalidade de baixo risco.</p>
+                <p>A vários tipos de investimentos, resumidamente temos investimentos de alto risco e de baixo risco, podemos dizer que existem perfis de investimentos, então é necessário analisar todas as opcoẽs e vê a que melhor se encaixa no estilo de vida de cada um, levando em conta alguns critérios como:</p>
+               	<ol>
+                    <li>valor a ser investido</li>
+                    <li>analisar o rendimento com base na inflação</li>
+                    <li>a necessidade do uso desse dinheiro para suas metas</li>
+                    <li>valor dos impostos sobre o investimento</li>
+                </ol>
+                
             </article>
             <aside></aside>
         </section>
