--- a/Materia4.html
+++ b/Materia4.html
@@ -13,7 +13,7 @@
     </nav>
     <main>
         <header>
-            <h1>O que é educação financeira?</h1>
+            <h1>Poupança</h1>
             <p>12/12/2023</p>
             <figure id="LogoG">
                 <img src="IMG/LogoComFundo.PNG" alt="LogoDoBlog">
@@ -22,7 +22,11 @@
         <section>
             <article>
                 <h3>Tema</h3>
-                <p>Educação financeira é o processo em que um indivíduo busca ou obtém conhecimento para lidar com o dinheiro de forma mais consciente e inteligente. Sabendo conceitos básicos de economia como receitas e despesas, juros e inflação ,créditos , investimentos e contas. <br>Mostrando a importância de uma planilha de gastos e criação de hábitos financeiramente rentáveis e seus impactos no cotidiano das pessoas. E com base em artigos confiáveis do governo, analisar a melhor forma de guarda e investir. <br>Portanto esses conhecimentos de finanças são de suma importância para as pessoas pois possibilitam qualidade de vida no presente e principalmente no futuro delas, trazendo conforto para a velhice, já que o bom uso das ferramentas de finanças pessoais tem como resultado uma estabilidade financeira, até mesmo em momentos de crises e situações inusitadas. </p>
+                <p>A poupança é uma das aplicações mais tradicionais, a poupança aceita valores baixos para que você comece a investir e permite retiradas imediatas. Os juros pagos são definidos pelo Banco Central. É um investimento de baixo risco e alta liquidez e que o acesso ao dinheiro é livre, algumas informaçoẽs importantes são a rentabilidade de tal investimento que são bases em alguns fatores externos como a taxa selic.</p> 
+                <p>Desde de 2012 o rendimento segue a seguinte logística quando a Selic (taxa básica do juros) estiver abaixo de 8,5% ao ano, a poupança rende 70% do valor da taxa básica mais a Taxa Referencial (TR) e quando estiver maior do que 8,5% ao ano, o rendimento passa a ser de 0,5% ao mês mais a TR. Dois fatores para lucro com a poupança são a quantidade de dinheiro na conta e o tempo que ele ficará parado na conta , quanto maior esses dois fatores maior o lucro.</p>
+                <h4>Exemplo</h4>
+                <p>Você deposita R$1.000 no 1º dia, do próximo , você terá aproximadamente R$1.001,31. Já se você aplicar R$3.000 no dia 1º dia, do próximo mês , você terá aproximadamente R$3.003,92.</p>
+                <p>Apesar de ser um investimento de baixo risco e considerado seguro levando em conta fatores externos da economia como as taxas de juros , a poupança não acaba sendo um investimento com um retorno alto e acaba não sendo tão significativo como outros.</p>
             </article>
             <aside></aside>
         </section>
