--- a/Materia6.html
+++ b/Materia6.html
@@ -13,7 +13,7 @@
     </nav>
     <main>
         <header>
-            <h1>O que é educação financeira?</h1>
+            <h1>Bolsa de Valores</h1>
             <p>12/12/2023</p>
             <figure id="LogoG">
                 <img src="IMG/LogoComFundo.PNG" alt="LogoDoBlog">
@@ -22,7 +22,15 @@
         <section>
             <article>
                 <h3>Tema</h3>
-                <p>Educação financeira é o processo em que um indivíduo busca ou obtém conhecimento para lidar com o dinheiro de forma mais consciente e inteligente. Sabendo conceitos básicos de economia como receitas e despesas, juros e inflação ,créditos , investimentos e contas. <br>Mostrando a importância de uma planilha de gastos e criação de hábitos financeiramente rentáveis e seus impactos no cotidiano das pessoas. E com base em artigos confiáveis do governo, analisar a melhor forma de guarda e investir. <br>Portanto esses conhecimentos de finanças são de suma importância para as pessoas pois possibilitam qualidade de vida no presente e principalmente no futuro delas, trazendo conforto para a velhice, já que o bom uso das ferramentas de finanças pessoais tem como resultado uma estabilidade financeira, até mesmo em momentos de crises e situações inusitadas. </p>
+                <p>A bolsa de valores é um mercado financeiro organizado e regulamentado onde os investidores compram e vendem títulos financeiros, como ações, títulos, commodities e outros instrumentos financeiros. Investir na bolsa de valores é basicamente investir em açoẽs de empresas, as ações correspondem a uma parcela do capital de uma empresa. Ao comprar um papel, o investidor se torna sócio do negócio, o que significa que ele poderá participar da divisão dos lucros, de acordo com a cota que possui, assim como ter que lidar com possíveis prejuízos que a companhia possa ter.</p>
+                <h4>bolsa de valores brasileira </h4>
+                <p>No Brasil, a Bolsa de Valores é chamada B3 e é supervisionada pela Comissão de Valores Mobiliários (CVM). que é uma das principais empresas de infraestrutura de mercado financeiro no mundo, atuando em ambientes de bolsa e de balcão. Acreditamos que um ambiente de negócios confiável e dinâmico, por isso, oferecemos ferramentas que acompanham um mercado em constante desenvolvimento como o brasileiro. Que tem algumas principais frentes de atuação essas são:</p>
+                <p>Mercado de bolsa: onde negociam ativos como ações, fundos imobiliários e outros. As operações acontecem de forma organizada e padronizada em um pregão eletrônico.</p>
+                <p>Mercado de renda fixa e crédito: onde negociam ativos como ações, fundos imobiliários e outros. As operações acontecem de forma organizada e padronizada em um pregão eletrônico.</p>
+                <p>Infraestrutura para financiamento: oferecemos o sistema eletrônico para registro de gravames de financiamentos de veículos e o sistema de registro de contratos e garantia para o mercado imobiliário, entre outros serviços.</p>
+                <p>Tecnologia, dados e serviços: inclui serviços para os participantes de mercado que usam como base dados que transitam por nossos ambientes. Isso inclui soluções dados e apoio para a realização de leilões e licitações e muito mais.</p>
+                <p>ASG - Ambiental, Social e Governança: temos o papel de induzir as melhores práticas de sustentabilidade e oferecer produtos e serviços ASG para o mercado</p>
+                <p>Para investir na bolsa de valores é necessário ter uma conta em uma corretora de valores ou instituição financeira autorizada pela CVM. Elas funcionam como intermediárias do investimento.</p>
             </article>
             <aside></aside>
         </section>
