--- a/Materia8.html
+++ b/Materia8.html
@@ -13,7 +13,7 @@
     </nav>
     <main>
         <header>
-            <h1>O que é educação financeira?</h1>
+            <h1>Crédito</h1>
             <p>12/12/2023</p>
             <figure id="LogoG">
                 <img src="IMG/LogoComFundo.PNG" alt="LogoDoBlog">
@@ -22,7 +22,14 @@
         <section>
             <article>
                 <h3>Tema</h3>
-                <p>Educação financeira é o processo em que um indivíduo busca ou obtém conhecimento para lidar com o dinheiro de forma mais consciente e inteligente. Sabendo conceitos básicos de economia como receitas e despesas, juros e inflação ,créditos , investimentos e contas. <br>Mostrando a importância de uma planilha de gastos e criação de hábitos financeiramente rentáveis e seus impactos no cotidiano das pessoas. E com base em artigos confiáveis do governo, analisar a melhor forma de guarda e investir. <br>Portanto esses conhecimentos de finanças são de suma importância para as pessoas pois possibilitam qualidade de vida no presente e principalmente no futuro delas, trazendo conforto para a velhice, já que o bom uso das ferramentas de finanças pessoais tem como resultado uma estabilidade financeira, até mesmo em momentos de crises e situações inusitadas. </p>
+                Ele é uma forma rápida de levantar dinheiro para que você compre um produto ou serviço mesmo que você não tenha, no momento da compra, o dinheiro necessário. Assim, você faz o pagamento só depois da compra, com o acréscimo de um valor dos juros. O uso dessa ferramenta é normal no cotidiano dos brasileiros e um dos principais motivos do endividamento das famílias brasileiras.
+                tipos de créditos:
+                Cartão de crédito: com o cartão, é possível fazer compras e realizar o pagamento futuramente. As compras feitas são centralizadas na fatura que deve ser paga mensalmente. Para ter o cartão e poder usar normalmente, em geral, o cliente paga uma anuidade para empresa ou banco que emite.
+                Cheque especial: é um limite disponibilizado na conta corrente, que funciona como uma espécie de empréstimo que o banco oferece de forma automática, para ser utilizado quando o cliente precisar.
+                Compra parcelada: o chamado crediário, comum em lojas, é a oferta de pagamento parcelado. Essa modalidade facilita a compra de produtos mais caros, mas geralmente prevê o pagamento de juros nas parcelas.
+                Empréstimo: os bancos oferecem várias modalidades de crédito pessoal (empréstimo) aos seus clientes. Os empréstimos podem servir tanto para realizar uma compra de valor alto, quanto para saldar dívidas de outras modalidades de crédito com juros mais altos
+                Crédito consignado: é uma modalidade de empréstimo em que as parcelas são descontadas diretamente da folha de pagamento, sem necessidade de avalista. É um tipo de crédito que conta com vantagens especiais e melhores condições para funcionários de empresas e órgãos conveniados com o banco, aposentados e pensionistas do INSS.Quando você solicita crédito, o credor avalia seu histórico de crédito, que inclui informações sobre sua capacidade de pagar empréstimos anteriores e sua pontuação de crédito. Com base nessa análise, o credor decide se você é elegível para o crédito e qual será o seu limite de crédito (o montante máximo que você pode emprestar). Por isso é de suma importância ter responsabilidade ao usar o crédito para não gerar uma dívida, por isso tem que ter em mente o dia do pagamento, o juro entre as parcelas e pensar bem antes de usar.
+
             </article>
             <aside></aside>
         </section>
