--- a/Materia9.html
+++ b/Materia9.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/materias.css">
-    <title>Educação Financeira - Nome da materia</title>
+    <title>Educação Financeira - Endividamento</title>
 </head>
 <body>
     <nav>
@@ -13,7 +13,7 @@
     </nav>
     <main>
         <header>
-            <h1>O que é liquidez?</h1>
+            <h1>Endividamento</h1>
             <p>12/12/2023</p>
             <figure id="LogoG">
                 <img src="IMG/LogoComFundo.PNG" alt="LogoDoBlog">
@@ -22,20 +22,9 @@
         <section>
             <article>
                 <h3>Tema</h3>
-                <p>Poupança: uma das aplicações mais tradicionais, a poupança aceita valores baixos para que você comece a investir e permite retiradas imediatas. Os juros pagos são definidos pelo Banco Central.</p>
-                <p>Previdência Privada: é um investimento de longo prazo para complementar a aposentadoria.</p>
-                <p>Fundos de investimento: funciona mais ou menos como um condomínio de investidores, onde cada investidor adquire uma cota desse fundo. Existem vários tipos de fundos de investimentos para vários perfis de investidores, de conservadores a moderados até os arrojados, que aceitam correr mais riscos na hora de investir.</p>
-                <p>Tesouro direto: é a compra de títulos públicos federais. Trata-se de um investimento seguro e de valor inicial baixo.</p>
-                <p>Ações: são partes de uma companhia. É como se a empresa fosse um bolo. Ao comprar ações, você passa a ser dono de uma fatia desse bolo, um acionista. Os rendimentos de quem investe em ações variam de acordo com a oscilação do valor dessa empresa na bolsa de valores.</p>
-                <p>CDBs: são títulos de renda fixa, depósitos a prazo utilizados pelos bancos para captar recursos. É uma modalidade de baixo risco.</p>
-                <p>A vários tipos de investimentos, resumidamente temos investimentos de alto risco e de baixo risco, podemos dizer que existem perfis de investimentos, então é necessário analisar todas as opcoẽs e vê a que melhor se encaixa no estilo de vida de cada um, levando em conta alguns critérios como:</p>
-               	<ol>
-                    <li>valor a ser investido</li>
-                    <li>analisar o rendimento com base na inflação</li>
-                    <li>a necessidade do uso desse dinheiro para suas metas</li>
-                    <li>valor dos impostos sobre o investimento</li>
-                </ol>
-                
+                <p>A cada 10 famílias brasileiras, 8 têm dívidas. Essa tem sido a taxa média de endividamento das famílias, medida pela Pesquisa de Endividamento e Inadimplência do Consumidor (Peic), divulgada pela Confederação Nacional do Comércio de Bens, Serviços e Turismo (CNC). Isso ocorre pelo uso incorreto do cartão de crédito que é o reflexo da falta de educação financeira dos brasileiros e como a falta de um planejamento afeta a vida das pessoas.</p>
+                <p>Por isso é necessário ter um controle de gastos , ter um conhecimento das próprias despesas e saber  dividir os gastos por categorias, vai ter vários pontos para  acompanhar as informações registradas no fim do mês, e ver em que fatores da sua rotina pode   economizar.  Ter uma planilha de gastos semanal, mensal e anual e sempre saber para onde o seu dinheiro está indo suas entradas e saídas.</p> 
+                <p>O endividamento das famílias é uma realidade e um ciclo que passa de geração em geração mas com o conhecimento da educação financeira na vida dos jovens podemos quebrar esse ciclo e ter futuras gerações independente financeiramente  e que façam escolhas que vão ser financeiramente sustentável e que tanto no presente tanto quando envelhecerem vão ter uma boa qualidade de vida.</p>
             </article>
             <aside></aside>
         </section>
