Navs sem o ul e li

--- a/Materia1.html
+++ b/Materia1.html
@@ -22,7 +22,9 @@
         <section>
             <article>
                 <h3>Tema</h3>
-                <p>Educação financeira é o processo em que um indivíduo busca ou obtém conhecimento para lidar com o dinheiro de forma mais consciente e inteligente. Sabendo conceitos básicos de economia como receitas e despesas, juros e inflação ,créditos , investimentos e contas. <br>Mostrando a importância de uma planilha de gastos e criação de hábitos financeiramente rentáveis e seus impactos no cotidiano das pessoas. E com base em artigos confiáveis do governo, analisar a melhor forma de guarda e investir. <br>Portanto esses conhecimentos de finanças são de suma importância para as pessoas pois possibilitam qualidade de vida no presente e principalmente no futuro delas, trazendo conforto para a velhice, já que o bom uso das ferramentas de finanças pessoais tem como resultado uma estabilidade financeira, até mesmo em momentos de crises e situações inusitadas. </p>
+                <p>Educação financeira é o processo em que um indivíduo busca ou obtém conhecimento para lidar com o dinheiro de forma mais consciente e inteligente. Sabendo conceitos básicos de economia como receitas e despesas, juros e inflação ,créditos , investimentos e contas.</p>
+                <p>Mostrando a importância de uma planilha de gastos e criação de hábitos financeiramente rentáveis e seus impactos no cotidiano das pessoas. E com base em artigos confiáveis do governo, analisar a melhor forma de guarda e investir.</p>
+                <p>Portanto esses conhecimentos de finanças são de suma importância para as pessoas pois possibilitam qualidade de vida no presente e principalmente no futuro delas, trazendo conforto para a velhice, já que o bom uso das ferramentas de finanças pessoais tem como resultado uma estabilidade financeira, até mesmo em momentos de crises e situações inusitadas.</p>
             </article>
             <aside></aside>
         </section>
