--- a/index.html
+++ b/index.html
@@ -23,29 +23,35 @@
         <section class="container">
             <button class="seta-anterior">⇦</button>
             <div class="slider">
-                <a class="slide" href="">
-                    <h2>Nome da Matéria1</h2>
-                    <div>
-                        <p class="tema">tema</p>
-                        <p>12/12/2023</p>
+                <a class="slide" href="Materia1.html">
+                    <div class="texto">
+                        <h2>Nome da Matéria1</h2>
+                        <div>
+                            <p class="tema">tema</p>
+                            <p>12/12/2023</p>
+                        </div>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos laborum illo excepturi beatae fuga adipisci, fugit, minima natus inventore eveniet maiores nam mollitia, ea pariatur consequuntur. Quisquam, labore enim!</p>
                 </a>
-                <a class="slide" href="">
-                    <h2>Nome da Matéria2</h2>
-                    <div>
-                        <p class="tema">tema</p>
-                        <p>12/12/2023</p>
+                <a class="slide" href="Materia2.html">
+                    <div class="texto">
+                        <h2>Nome da Matéria2</h2>
+                        <div>
+                            <p class="tema">tema</p>
+                            <p>12/12/2023</p>
+                        </div>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                     </div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos laborum illo excepturi beatae fuga adipisci, fugit, minima natus inventore eveniet maiores nam mollitia, ea pariatur consequuntur. Quisquam, labore enim!</p>
                 </a>
-                <a class="slide" href="">
-                    <h2>Nome da Matéria3</h2>
-                    <div>
-                        <p class="tema">tema</p>
-                        <p>12/12/2023</p>
+                <a class="slide" href="Materia3.html">
+                    <div class="texto">
+                        <h2>Nome da Matéria3</h2>
+                        <div>
+                            <p class="tema">tema</p>
+                            <p>12/12/2023</p>
+                        </div>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                     </div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos laborum illo excepturi beatae fuga adipisci, fugit, minima natus inventore eveniet maiores nam mollitia, ea pariatur consequuntur. Quisquam, labore enim!</p>
                 </a>
             </div>
             <button class="seta-proxima">⇨</button>
@@ -67,19 +73,19 @@
             <h3>Principais Materias</h3>
             <div id="ComAside">
                 <article>
-                    <a>
+                    <a href="Materia4.html">
                         <img src="" alt="">
                         <p class="temaM">Tema</p>
                         <h4>titulo</h4>
                         <p>categoria categoria categoria categoria</p>
                     </a>
-                    <a>
+                    <a href="Materia5.html">
                         <img src="" alt="">
                         <p class="temaM">Tema</p>
                         <h4>titulo</h4>
                         <p>categoria categoria categoria categoria</p>
                     </a>
-                    <a>
+                    <a href="Materia6.html">
                         <img src="" alt="">
                         <p class="temaM">Tema</p>
                         <h4>titulo</h4>
@@ -88,19 +94,19 @@
                     <aside id="asideMobile">
 
                     </aside>
-                    <a>
+                    <a href="Materia7.html">
                         <img src="" alt="">
                         <p class="temaM">Tema</p>
                         <h4>titulo</h4>
                         <p>categoria categoria categoria categoria</p>
                     </a>
-                    <a>
+                    <a href="Materia8.html">
                         <img src="" alt="">
                         <p class="temaM">Tema</p>
                         <h4>titulo</h4>
                         <p>categoria categoria categoria categoria</p>
                     </a>
-                    <a>
+                    <a href="">
                         <img src="" alt="">
                         <p class="temaM">Tema</p>
                         <h4>titulo</h4>
