--- a/Materia4.html
+++ b/Materia4.html
@@ -8,8 +8,16 @@
 </head>
 <body>
     <nav>
-        <a href="index.html"><img src="IMG/LogoSemFundo.PNG" alt="Menu"></a>
-        <span></span>
+        <div class="logo"><img src="IMG/LogoSemFundo.PNG" alt="Menu"></div>
+        <div class="MenuResponsivo">
+            <i class="material-symbols-outlined">menu</i>
+        </div>
+        <ul>
+            <li><a href="index.html">Principal</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Quem somos</a></li>
+            <li><a href="">Serviços</a></li>
+        </ul>
     </nav>
     <main>
         <header>
