Atualizaçao de pastas e imagens

--- a/Remasterização/index.html
+++ b/Remasterização/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/Responsividade.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
     <title>Educação Financeira</title>
 </head>
 
@@ -14,7 +14,7 @@
     <nav>
         <img src="IMG/LogoSemFundo.PNG" alt="LogoDaEmpresa">
         <div>
-            <img src="IMG/MenuBranco.png" alt="IconeDoMenu" id="MenuHam">
+            <img src="IMG/Icons/MenuBranco.png" alt="IconeDoMenu" id="MenuHam">
         </div>
         <ul>
             <li><a href="index.html">Principal</a></li>
@@ -146,17 +146,17 @@
                 <img src="" alt="LogoDoBlog">
                 <p>MONETIZE-SE</p>
             </div>
-            <div id="map" style="height: 200px;"></div>
+            <div id="map"></div>
             <div>
                 <h3>Contato</h3>
-                <p>Endereço</p>
-                <p>Fone</p>
-                <p>Redes Sociais</p>
-                <p>Email</p>
+                <p><img src="IMG/Icons/Predio.png" alt="IconPredio">Endereço</p>
+                <p><img src="IMG/Icons/Telefone.png" alt="IconPredio">Fone</p>
+                <p><img src="IMG/Icons/whatsapp.png" alt="IconPredio">WhatsApp</p>
+                <p><img src="IMG/Icons/Email.png" alt="IconPredio">Email</p>
+                <p><img src="IMG/Icons/instagram.png" alt="IconPredio">Redes Sociais</p>
             </div>
         </div>
         <p>Direitos Reservados pela Monetize-se © <br> Feito por <a href="">Leticia Moraes</a></p>
     </footer>
     <script src="JS/script.js"></script>
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </body>
