--- a/Remasterização/Blog.html
+++ b/Remasterização/Blog.html
@@ -5,35 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>Educação Financeira</title>
+    <link rel="stylesheet" href="CSS/Responsividade.css">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
+    <title>Educação Financeira - Blog</title>
 </head>
 
 <body>
     <nav>
-        <div class="logo"><img src="IMG/LogoSemFundo.PNG" alt="Menu"></div>
-        <div class="MenuResponsivo">
-            <i class="material-symbols-outlined">menu</i>
+        <img src="IMG/Logos/LComNomeAoLadoAzul.png" alt="LogoDaEmpresa">
+        <div>
+            <img src="IMG/Icons/MenuBranco.png" alt="IconeDoMenu" id="MenuHam">
         </div>
         <ul>
             <li><a href="index.html">Principal</a></li>
             <li><a href="">Blog</a></li>
-            <li><a href="">Quem somos</a></li>
+            <li><a href="">Quem Somos</a></li>
             <li><a href="">Serviços</a></li>
         </ul>
     </nav>
     <main>
-        <header>
-            <h1>Bem vindo ao Educação Financeira<br>Seu blog de finanças para adolescentes</h1>
-            <figure id="LogoG">
-                <img src="IMG/LogoComFundo.PNG" alt="LogoDoBlog">
-            </figure>
-        </header>
-        <section class="container">
-            <button class="seta-anterior">⇦</button>
-            <div class="slider">
+        <section id="container">
+            <button id="seta-anterior">⇦</button>
+            <div id="slider">
                 <a class="slide" href="Materia1.html">
-                    <div class="texto">
+                    <div id="texto">
                         <h2>Nome da Matéria1</h2>
                         <div>
                             <p class="tema">tema</p>
@@ -43,7 +38,7 @@
                     </div>
                 </a>
                 <a class="slide" href="Materia2.html">
-                    <div class="texto">
+                    <div id="texto">
                         <h2>Nome da Matéria2</h2>
                         <div>
                             <p class="tema">tema</p>
@@ -53,7 +48,7 @@
                     </div>
                 </a>
                 <a class="slide" href="Materia3.html">
-                    <div class="texto">
+                    <div id="texto">
                         <h2>Nome da Matéria3</h2>
                         <div>
                             <p class="tema">tema</p>
@@ -63,10 +58,8 @@
                     </div>
                 </a>
             </div>
-            <button class="seta-proxima">⇨</button>
-            <div class="indicadores">
-                
-            </div>
+            <button id="seta-proxima">⇨</button>
+            <div class="indicadores"></div>
         </section>
         <section id="categorias">
             <h3>O que procura?</h3>
@@ -93,6 +86,9 @@
                         <h4>titulo</h4>
                         <p>categoria categoria categoria categoria</p>
                     </a>
+                    <aside>
+                        <p>e</p>
+                    </aside>
                     <a href="Materia6.html">
                         <img src="" alt="">
                         <p class="temaM">Tema</p>
@@ -100,7 +96,7 @@
                         <p>categoria categoria categoria categoria</p>
                     </a>
                     <aside id="asideMobile">
-
+                        <p>e</p>
                     </aside>
                     <a href="Materia7.html">
                         <img src="" alt="">
@@ -108,6 +104,9 @@
                         <h4>titulo</h4>
                         <p>categoria categoria categoria categoria</p>
                     </a>
+                    <aside>
+                        <p>e</p>
+                    </aside>
                     <a href="Materia8.html">
                         <img src="" alt="">
                         <p class="temaM">Tema</p>
@@ -120,39 +119,40 @@
                         <h4>titulo</h4>
                         <p>categoria categoria categoria categoria</p>
                     </a>
+                    <aside>
+                        <p>e</p>
+                    </aside>
                 </article>
-                <aside>
-                    <p>e</p>
-                </aside>
             </div>
         </section>
-        <section id="Nesler">
-            <h1></h1>
-            <p></p>
+        <section id="Newsletter">
+            <div>
+                <h1>Assine nossa <span>Newsletter</span></h1>
+                <p>Preencha os campos para receber todos os dias dicas excluisvas de como cuidar do seu dinheiro</p>
+            </div>
             <form action="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
+                <input type="text" name="" id="" placeholder="Nome">
+                <input type="email" name="" id="" placeholder="Email">
             </form>
         </section>
     </main>
     <footer>
-        <div>
-            <div id="LogoEmpresa">
-                <img src="" alt="">
-                <p>nome da empresa</p>
+        <div id="containerF">
+            <div id="Empresa">
+                <img src="IMG/Logos/LogoComFundoAzul.png" alt="LogoDoBlog">
+                <h3>MONETIZE-SE</h3>
             </div>
-            <div id="Mapa"></div>
+            <div id="map"></div>
             <div id="Contatos">
-                <h6>Contatos</h6>
-                <p>fone</p>
-                <p>celular</p>
-                <p>email</p>
-                <p>Rede Social</p>
+                <h3>Contato</h3>
+                <img src="IMG/Icons/Predio.png" alt="IconPredio"><p>Rua José Versolato 111 - Centro - São Bernardo do Campo</p><br>
+                <img src="IMG/Icons/Telefone.png" alt="IconTel"><p>(11)4823-7765</p><br>
+                <img src="IMG/Icons/whatsapp.png" alt="IconWhats"><p>(11) 98756-4456</p><br>
+                <img src="IMG/Icons/Email.png" alt="IconEmail"><p>educacaofinanceiratcc23@gmail.com</p><br>
+                <img src="IMG/Icons/instagram.png" alt="IconInsta"><p>@aces.soriafinanceira</p><br>
             </div>
         </div>
-        <p>Direitos reservados por - Feito por <a href="">Leticia Moraes</a></p>
+        <p id="Direitos">Direitos Reservados pela Monetize-se © <br> Feito por <a href="">Leticia Moraes</a></p>
     </footer>
     <script src="JS/script.js"></script>
 </body>
-
-</html>
