--- a/Remasterização/Padrao.html
+++ b/Remasterização/Padrao.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/padrão.css">
     <link rel="stylesheet" href="CSS/Responsividade.css">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
     <title>Educação Financeira</title>
@@ -24,10 +24,6 @@
         </ul>
     </nav>
     <main>
-        <header>
-            <h1>Bem vindo ao Educação Financeira<br>Seu blog de finanças para adolescentes</h1>
-            <img src="IMG/LogoComFundo.PNG" alt="LogoDoBlog" id="LogoG">
-        </header>
         <section id="Newsletter">
             <div>
                 <h1>Assine nossa <span>Newsletter</span></h1>
